--- a/gms/pwa/sudoku/manifest.json
+++ b/gms/pwa/sudoku/manifest.json
@@ -9,10 +9,14 @@
   "theme_color": "#4a90e2",
   "icons": [
     {
-      "src": "data:image/svg+xml,<svg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 100 100'><rect width='100' height='100' fill='#4a90e2'/><text x='50%' y='50%' font-size='48' fill='white' text-anchor='middle' dy='.3em'>S</text></svg>",
+      "src": "./icon.png",
+      "sizes": "192x192",
+      "type": "image/png"
+    },
+    {
+      "src": "./icon.png",
       "sizes": "512x512",
-      "type": "image/svg+xml",
-      "purpose": "any maskable"
+      "type": "image/png"
     }
   ]
 }
