--- a/gms/pwa/sudoku/manifest.json
+++ b/gms/pwa/sudoku/manifest.json
@@ -9,12 +9,7 @@
   "theme_color": "#4a90e2",
   "icons": [
     {
-      "src": "./icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "./icon.png",
+      "src": "./icon-512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
